# distance_geometry

./: .clang-format  .gitignore  CMakeLists.txt
scripts/: grid_instance_gen.py  visualizer.py
src/: main.cpp
tests/: README.md  generate_all.sh  large.in  planar_1.in  small.in
